--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.FY_Project_3As"
         tools:targetApi="31">
         <activity
+            android:name=".SubjectTwoTopicsActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.SubjectOneTopicsActivity"
             android:exported="false" />
         <activity
